# fyri

./: .drawio  Cargo.toml  README.md
src/: main.rs
src/mq/: email.rs
